packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-004.ttrp
// expect: TTRP-PD-004
container c target polars """pandas
t[amount > 0]
"""
